@@ -1,5 +1,6 @@
 Upgrading to v1.0.4.2
 =====================
+Run `rake gems:install`
 Run `ruby script/generate plugin_migration`
 Run `rake db:migrate`
 Run `rake test && rake community_engine:test`
